tests/integration/tests/basic_functionality/check_commands/CHECK/two_strings/04-negative_match_second_string/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_EXEC %S/filecheck.check 2>&1 || true) | %FILECHECK_TESTER_EXEC %s --match-full-lines
; CHECK: {{^.*}}FileCheck{{$}}
; CHECK: {{.*filecheck.check:2:10: error: CHECK: expected string not found in input$}}
; CHECK: {{^}}; CHECK: foo{{$}}
; CHECK: {{^}}         ^{{$}}
; CHECK: {{^<stdin>:.*:.*: note: scanning from here$}}
; CHECK: hello2
; CHECK: ^{{$}}
; CHECK: {{^<stdin>:.*:.*: note: possible intended match here$}}
; CHECK: {{^.*$}}
; CHECK: ^
; CHECK-EMPTY:
